--- a/Historico.html
+++ b/Historico.html
@@ -36,6 +36,11 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
     
+    <strong>09/02 Quinta-Feira</strong> 2.4<br>
+    Adicionei mais coisas em Python, falta editar<br>
+    Adicionei mais atalhos
+    <br><br>
+    
     <strong>08/02 Quarta-Feira</strong> 2.3 <br>
     Adicionei o menu ZZZ01 é o 2° projeto que estou pensando em focar, futuramente irei explicar o que é<br>
     Adicionei muitas coisas no menu Python<br>
