--- a/TagsCSS.html
+++ b/TagsCSS.html
@@ -33,6 +33,7 @@
     </ol>
     <h1>Tags CSS</h1>
 
+    <p><strong>Lembrando que pode ser colocado essas tags na parte < style>< /style> do documento html </strong></p><br>
     <p><strong>@charset "UTF-8" ;</strong><br>
     Isso é pra pegar acentuação e cabeçalho<br>
     Deve ser colado no começo do arquivo.css</p>
@@ -48,7 +49,9 @@
     Pode colocar dentro :<br>    
     text-decoration: underline;</p>
 
-    <p>01-<strong>background-color: rgb(169, 228, 178)</strong><br>
+    <p>01-<strong>background-color: rgb(169, 228, 178);</strong><br>
+    Precisa ser colocado dentro de algo, pode ser body, div, etc <br>
+    Não esquecer do ;<br>
     Está definindo a cor de fundo do site pra rgb(169, 228, 178) <br>
     A cor pode ser <strong>escrita</strong> de várias formas :<br>
     yellow, green, etc<br> 
@@ -85,6 +88,10 @@
     hsl(M, S%, L%) : Matriz, Saturação e Luminosidade<br>
     hsla(M, S%, L%, .A): Matriz, Saturação, Luminosidade e Alpha <br>
     hwb(Xrad, Y%, W% / Z)<br>
+    </p>
+
+    <p>06¹<strong>display: flex;</strong><br>
+    Ele joga o conteúdo todo pra direita
     </p>
 
     <p>05-<strong>div#NomeDaDiv { }</strong><br>
