--- a/TagsHTML.html
+++ b/TagsHTML.html
@@ -198,6 +198,17 @@
     </p>
 
     <p>
+        17¹ <strong>< picture>< /picture></strong><br>
+        O comando abaixo precisa ser colocado dentro do comando acima<br>
+        <strong>< source media="(max-witdh:750px)" srcset="nomedoarquivo.png" type="image/png"></strong><br>
+        Esse comando é pra colocar uma imagem do tamanho pequena<br>
+        <strong>< source media="(max-witdh:1050px)" srcset="nomedoarquivo.png" type="image/png"></strong><br>
+        Imagem tamanho médio<br>
+        <strong>< img src="grande.png" alt="Imagem Flexível"></strong><br>
+        Imagem tamanho grande<br>
+    </p>
+
+    <p>
         17¹ <strong>< pre> Texto < /pre></strong><br>
         Tudo que está no Texto vai respeitar a sua formatação.<br>
         Se pular linha, vai pular linha, não será necessário usar outras tags<br>
