--- a/Historico.html
+++ b/Historico.html
@@ -35,6 +35,12 @@
     <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+
+    <strong>10/02 Sexta-Feira</strong>2.5<br>
+    Criado o menu Canvas <br>
+    Criado o Jogo da Cobrinha, basicamente fiz um fork de um projeto e editei pra ficar do meu jeito <br>
+    O ChatGPT explicando tudo sobre os comandos do jogo vai estar no meu Github, futuramente eu coloco aqui também
+    <br><br>
     
     <strong>09/02 Quinta-Feira</strong> 2.4<br>
     Adicionei mais coisas em Python, falta editar<br>
