--- a/JogoCobrinhaCell.html
+++ b/JogoCobrinhaCell.html
@@ -7,16 +7,12 @@
     <title>JogoCobrinha</title>
     <link rel="stylesheet" href="estilo06.css">
     <script src="codigo05.js"></script>
-    <script src="codigo06.js"></script>
+    <script src="codigo0    7.js"></script>
 </head>
 <body>
     <ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
 	</ul>
-    <h1>Jogo da Cobrinha</h1>
-    <li><a href="https://codepen.io/programadoresdepre/pen/dyoOEwL" target="_blank">Jogo original</a></li>
-    <li><a href="https://codepen.io/danzinho007/pen/abjrgja" target="_blank">Meu fork</a></li>
-    <p>Meu fork / clone é o mesmo jogo do site</p>
     <div id="gameArea">
         <div id="gameBox">
 
