--- a/Historico.html
+++ b/Historico.html
@@ -36,6 +36,12 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>11/02 Sábado</strong>2.6<br>
+    Adicionei a explicação do Código do Jogo Cobrinha<br>
+    Adicionei uma modificação pro Jogo Cobrinha funcionar em celular<br>
+    Adicionei 2 link : Um pra versão original e pra versão do meu fork que é a mesma que coloquei no site
+    <br><br>
+
     <strong>10/02 Sexta-Feira</strong>2.5<br>
     Criado o menu Canvas <br>
     Criado o Jogo da Cobrinha, basicamente fiz um fork de um projeto e editei pra ficar do meu jeito <br>
