--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
-        <li><a href="JogoCobrinha.html">Jogo da Cobrinha</a></li>
+        <li><a href="JogoCobrinha.html">Jogo Cobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">Jogo Cobrinha Celular</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
