--- a/Historico.html
+++ b/Historico.html
@@ -36,6 +36,10 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>12/02 Domingo</strong> 2.7<br>
+    Versão fraquinha pois hoje é Domingo, foquei em Dicas, o resto não alterei nada
+    <br><br>
+
     <strong>11/02 Sábado</strong>2.6<br>
     Adicionei a explicação do Código do Jogo Cobrinha<br>
     Adicionei uma modificação pro Jogo Cobrinha funcionar em celular<br>
