--- a/JogoCobrinhaCell.html
+++ b/JogoCobrinhaCell.html
@@ -7,7 +7,7 @@
     <title>JogoCobrinha</title>
     <link rel="stylesheet" href="estilo06.css">
     <script src="codigo05.js"></script>
-    <script src="codigo0    7.js"></script>
+    <script src="codigo07.js"></script>
 </head>
 <body>
     <ul>
