--- a/Dicas.html
+++ b/Dicas.html
@@ -49,6 +49,9 @@
         <li>WordPress = Hostnet</li>
     </ul>
 
+    <h2><a href="https://www.youtube.com/@cfbcursos/playlists" target="_blank">CFB Cursos</a></h2>
+    <p>Android Studio, Arduino, Bootstrap, C++, Canvas, Flash, HTML5, Java, JavaScriptm jQuery, Lua, Node, Node-Red, Rasberry Pi, React, React Native, Photoshop, PHP, Programação Web Front-End, Python, Realidade Aumentada e SQL</p>
+    
     <h2><a href="https://www.cursoemvideo.com/cursos/" target="blank">Curso em Vídeo</a> : </h2>
     <p>Algoritmo, CSS 3, Git & Github, HTML 5, Java, JavaScript, MySQL, Python 3 </p>
     <p>Link citado : <a href="https://www.cursoemvideo.com/cursos/" target="_blank">https://www.cursoemvideo.com/cursos/</a></p>
