--- a/Historico.html
+++ b/Historico.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico</title>
-    <link rel="stylesheet" href="estilo05.css">
+    <link rel="stylesheet" href="estilo07.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
@@ -16,9 +16,13 @@
 	<ol>
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -31,10 +35,17 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+        <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
     <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+
+    <strong>13/02 Segunda-Feira</strong> 2.8 <br>
+    Hoje eu foquei mais na aparência do site, ajeitando menus e alterando cores, ontem dei mais 1 dica ( CFB Cursos ) e hoje postei mais algumas lá <br>
+    Removi o Jogo da Cobrinha Cell pois os controles não estão funcionando<br>
+    Resolvi colocar x2 no jogo da Cobrinha, ao invés de remover ele, ou seja, você vai ganhar 8 pontos e crescer também
+    <br><br>
 
     <strong>12/02 Domingo</strong> 2.7<br>
     Versão fraquinha pois hoje é Domingo, foquei em Dicas, o resto não alterei nada
