--- a/ProjetoAlfa.html
+++ b/ProjetoAlfa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjetoAlfa</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo15.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
@@ -16,9 +16,13 @@
 	<ol>
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -31,7 +35,9 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+        <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    <div id="interface">
     <h1>Alfabeto</h1>
     <ol>
     <!--ol = Lista ordenada : 1,2,3,etc-->
@@ -109,5 +115,6 @@
     <li>Zー</li>
     <li></li>
     </ol>
+</div>
 </body>
 </html>
