--- a/TagsJavaScript.html
+++ b/TagsJavaScript.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TagsJavaScript</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilo56.css">
+    <link rel="stylesheet" href="estilo20.css">
 </head>
 
 <body>
@@ -14,9 +14,13 @@
     <ol>
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -29,21 +33,15 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+        <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
-
-    <div id="inferface">
+    <div id="interface">
     <h1>TagsJavaScript</h1>
     <h3>Obs¹ : Essas tags precisam ser colocadas dentro da tag<br> < script>< /script></h3>
-
-    <code>        
-            
     -------- <strong>Letra N</strong> --------
-
-    <p>
-    <strong>var n0 = window.prompt('Digite o número: ')</strong><br>
+    <p><strong>var n0 = window.prompt('Digite o número: ')</strong><br>
     Isso mostra uma janela e guarda o valor digitado na var n0
     </p>
-
     <p>
     <strong>var n1 = window.prompt('Digite o 1° número: ')</strong> <br>
     <strong>var n2 = window.prompt('Digite o 2° número: ')</strong><br>
@@ -52,9 +50,7 @@
     Vai mostrar na tela : String + String junta, logo n1 + n2 é n1n2<br>
     Isso irá juntar os 2 valores, pois o comando window.prompt só lê string<br>
     </p>
-
-        <p>
-        <strong>var n3 = Number.parseInt(window.prompt('Digite o 3° número : '))</strong><br>
+    <p><strong>var n3 = Number.parseInt(window.prompt('Digite o 3° número : '))</strong><br>
         Aqui estamos convertendo a string window.prompt em Número Inteiro, caso<br> a pessoa digite número real, vai contar somente a parte inteira.<br>
         Exemplo 4.50 , parte inteira é 4<br>
         </p>
@@ -111,7 +107,6 @@
         <strong>window.prompt("Olá Mundo")</strong><br>
         Esse comando mostra uma janela escrita Olá Mundo<br>
         </p>
-        </code>
     </div>
 </body>
 </html>
