--- a/Xadrez.html
+++ b/Xadrez.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Xadrez</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo21.css">
 </head>
 <body>
     <ul>
@@ -13,9 +15,13 @@
 	<ol>
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -28,12 +34,15 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+        <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    <div id="interface">
     <h1>Xadrez</h1>
     <p>O xadrez foi inventado em 1866 por Bobby Spassky. É jogado por 3 jogadores, Branco, Preto e Hikaru Nakamura. Você quer jogar?</p>
     <p>1.e4 inicia o Gambito da Dama. Uma abertura raramente jogada que foi criada em 1997 por Garry Kasparov.</p>
     <p>Um pedaço foi levado. Sempre que uma peça é retirada, as outras peças ficam tristes e perguntam aos amigos o que aconteceu.</p>
     <p>A rainha pode se mover em todas as direções até ser capturada por outra peça. Rainhas não podem se mover depois de serem capturadas.</p>
     <p>Eu ganhei! Vencer é uma das maneiras mais felizes de um jogo de xadrez terminar. Terminei o jogo me sentindo feliz. Você está feliz? Eu sou.</p>
+    </div>
 </body>
 </html>
