--- a/ZZZ01.html
+++ b/ZZZ01.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="estilo100.css">
 </head>
 <body>
+    <ul>
+		<li><a href="index.html" rel="prev">Voltar</a></li>
+	</ul>
     <p>Jogar</p>
     <p>Problemas</p>
     <p>Aprender</p>
