--- a/JogoCobrinhaCell.html
+++ b/JogoCobrinhaCell.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JogoCobrinha</title>
-    <link rel="stylesheet" href="estilo06.css">
+    <title>JogoCobrinhaCell</title>
+    <link rel="stylesheet" href="estilo08.css">
     <script src="codigo05.js"></script>
     <script src="codigo07.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
 	</ul>
+    <h1>Jogo da Cobrinha</h1>
+    <li><a href="https://codepen.io/programadoresdepre/pen/dyoOEwL" target="_blank">Jogo original</a></li>
+    <li><a href="https://codepen.io/danzinho007/pen/abjrgja" target="_blank">Meu fork</a></li>
+    <p>Meu fork / clone é o mesmo jogo do site</p>
     <div id="gameArea">
         <div id="gameBox">
 
