--- a/Python.html
+++ b/Python.html
@@ -18,9 +18,13 @@
     <ol>
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -29,10 +33,11 @@
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
-        <li><a href="TagsCSS.html" rel="next">TagsCSS</a></li>
+        <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+        <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
     <div id="interface">
         <h1>Python</h1>
