--- a/TagsCSS.html
+++ b/TagsCSS.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TagsCSS</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo18.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
@@ -15,9 +15,13 @@
 	<ol>
         <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -30,7 +34,9 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+        <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    <div id="interface">
     <h1>Tags CSS</h1>
 
     <p><strong>Lembrando que pode ser colocado essas tags na parte < style>< /style> do documento html </strong></p><br>
@@ -186,5 +192,6 @@
     <p>06-<strong>width: XXXpx;</strong><br>
     Largura em pixel
     </p>
+</div>
 </body>
 </html>
