--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
-        <li><a href="JogoCobrinha.html">Jogo Cobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">Jogo Cobrinha Celular</a></li>
+        <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
+        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -61,7 +61,7 @@
       ░░████████████░░░█████████████████░░░░░░
     </pre>
    <footer>
-        <p>Copyright ©2022</p>
+        <p>Site criado por Daniel Rocha em 2023</p>
     </footer>
 </div>
 </body>
